# SoftDA

./: CMakeLists.txt  LICENSE  README.md
example/: flow.des  signoff.des
example/darpa-idea/: flow.des  signoff.des
example/darpa-idea/ot1/: ot1.tech
example/darpa-idea/ot2/: ot2.tech
example/darpa-idea/pr/: hello.cpp
example/ot1/: ot1.tech
example/ot2/: ot2.tech
example/pr/: pr.tech
main/: sda.cpp
sda/: headerdef.hpp
sda/des/: des.hpp  module.cpp  module.hpp
sda/static/: logger.hpp
sda/utility/: index.hpp  iterator.hpp  lambda.hpp  logger.hpp  os.cpp  os.hpp  scope_guard.hpp  singleton.hpp  tokenizer.cpp  tokenizer.hpp  utility.hpp
